--- a/tmux.conf
+++ b/tmux.conf
@@ -1,2 +1,8 @@
 unbind C-b
 set -g prefix C-a
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+set -g mouse-utf8 on
+
+set -g set-titles on
