--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,9 @@
 unbind C-b
 set -g prefix C-a
+
+set-window-option -g utf8 on
+set -g default-terminal screen-256color
+
 set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
