--- a/.gitmodules
+++ b/.gitmodules
@@ -11,10 +11,6 @@
 [submodule "vim/bundle/numbers"]
   path = vim/bundle/numbers
   url = https://github.com/myusuf3/numbers.vim.git
-[submodule "vim/bundle/sparkup"]
-  path = vim/bundle/sparkup
-  url = https://github.com/tristen/vim-sparkup.git
-  ignore = dirty
 [submodule "vim/bundle/fish"]
   path = vim/bundle/fish
   url = https://github.com/Soares/fish.vim.git
@@ -68,11 +64,15 @@
   path = vim/bundle/latex-box
   url = git://github.com/LaTeX-Box-Team/LaTeX-Box.git
 [submodule "powerline"]
-	path = powerline
-	url = git://github.com/Lokaltog/powerline.git
+  path = powerline
+  url = git://github.com/Lokaltog/powerline.git
 [submodule "vim/bundle/slim"]
-	path = vim/bundle/slim
-	url = git://github.com/slim-template/vim-slim.git
+  path = vim/bundle/slim
+  url = git://github.com/slim-template/vim-slim.git
 [submodule "vim/bundle/loremipsum"]
-	path = vim/bundle/loremipsum
-	url = git://github.com/vim-scripts/loremipsum.git
+  path = vim/bundle/loremipsum
+  url = git://github.com/vim-scripts/loremipsum.git
+  ignore = dirty
+[submodule "vim/bundle/zencoding"]
+  path = vim/bundle/zencoding
+  url = git://github.com/mattn/zencoding-vim.git
