--- a/tmux.conf
+++ b/tmux.conf
@@ -16,3 +16,13 @@ set -g mouse-select-window on
 set -g mouse-utf8 on
 
 set -g set-titles on
+
+# Smart pane switching with awareness of vim splits
+bind -n C-h if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send-keys C-h" "select-pane -L"
+bind -n C-j if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send-keys C-j" "select-pane -D"
+bind -n C-k if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send-keys C-k" "select-pane -U"
+bind -n C-l if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send-keys C-l" "select-pane -R"
+bind -n "C-\\" if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send-keys C-\\" "select-pane -l"
+
+# Bring back clear screen under tmux prefix
+bind C-l send-keys 'C-l'
