--- a/.gitmodules
+++ b/.gitmodules
@@ -47,9 +47,6 @@
 [submodule "vim/bundle/typescript"]
   path = vim/bundle/typescript
   url = git://github.com/leafgarland/typescript-vim.git
-[submodule "vim/bundle/mru"]
-  path = vim/bundle/mru
-  url = git://github.com/vim-scripts/mru.vim.git
 [submodule "vim/bundle/surround"]
   path = vim/bundle/surround
   url = git://github.com/tpope/vim-surround.git
@@ -59,16 +56,16 @@
 [submodule "powerline"]
   path = powerline
   url = git://github.com/Lokaltog/powerline.git
-[submodule "vim/bundle/slim"]
-  path = vim/bundle/slim
-  url = git://github.com/slim-template/vim-slim.git
 [submodule "vim/bundle/loremipsum"]
   path = vim/bundle/loremipsum
   url = git://github.com/vim-scripts/loremipsum.git
   ignore = dirty
-[submodule "vim/bundle/zencoding"]
-  path = vim/bundle/zencoding
-  url = git://github.com/mattn/zencoding-vim.git
 [submodule "vim/bundle/tmux-navigator"]
 	path = vim/bundle/tmux-navigator
 	url = git://github.com/christoomey/vim-tmux-navigator.git
+[submodule "vim/bundle/emmet"]
+	path = vim/bundle/emmet
+	url = git://github.com/mattn/emmet-vim.git
+[submodule "vim/bundle/autoclose"]
+	path = vim/bundle/autoclose
+	url = git://github.com/Townk/vim-autoclose.git
