--- a/.gitmodules
+++ b/.gitmodules
@@ -5,9 +5,6 @@
 [submodule "vim/bundle/solarized"]
   path = vim/bundle/solarized
   url = https://github.com/altercation/vim-colors-solarized.git
-[submodule "vim/bundle/command-t"]
-  path = vim/bundle/command-t
-  url = git://git.wincent.com/command-t.git
 [submodule "vim/bundle/numbers"]
   path = vim/bundle/numbers
   url = https://github.com/myusuf3/numbers.vim.git
@@ -78,3 +75,9 @@
 [submodule "vim/bundle/rbenv"]
 	path = vim/bundle/rbenv
 	url = git://github.com/tpope/vim-rbenv.git
+[submodule "vim/bundle/supertab"]
+	path = vim/bundle/supertab
+	url = git://github.com/ervandew/supertab.git
+[submodule "vim/bundle/ctrlp"]
+	path = vim/bundle/ctrlp
+	url = git://github.com/kien/ctrlp.vim.git
