--- a/.gitmodules
+++ b/.gitmodules
@@ -66,9 +66,6 @@
 [submodule "vim/bundle/multiple-cursors"]
   path = vim/bundle/multiple-cursors
   url = git://github.com/terryma/vim-multiple-cursors.git
-[submodule "vim/bundle/snipmate"]
-  path = vim/bundle/snipmate
-  url = git://github.com/msanders/snipmate.vim.git
 [submodule "vim/bundle/rbenv"]
   path = vim/bundle/rbenv
   url = git://github.com/tpope/vim-rbenv.git
@@ -99,3 +96,12 @@
 [submodule "vim/bundle/bufferline"]
   path = vim/bundle/bufferline
   url = git://github.com/bling/vim-bufferline.git
+[submodule "vim/bundle/snipmate"]
+	path = vim/bundle/snipmate
+	url = git://github.com/garbas/vim-snipmate.git
+[submodule "vim/bundle/tlib"]
+	path = vim/bundle/tlib
+	url = git://github.com/tomtom/tlib_vim.git
+[submodule "vim/bundle/addon-mw-utils"]
+	path = vim/bundle/addon-mw-utils
+	url = git://github.com/MarcWeber/vim-addon-mw-utils.git
