--- a/.gitmodules
+++ b/.gitmodules
@@ -114,3 +114,6 @@
 [submodule "vim/bundle/ruby-minitest"]
   path = vim/bundle/ruby-minitest
   url = git://github.com/sunaku/vim-ruby-minitest.git
+[submodule "vim/bundle/coloresque"]
+	path = vim/bundle/coloresque
+	url = git://github.com/gorodinskiy/vim-coloresque.git
