Add Slim coloring

--- a/.gitmodules
+++ b/.gitmodules
@@ -120,3 +120,6 @@
 [submodule "vim/bundle/javascript"]
 	path = vim/bundle/javascript
 	url = git://github.com/pangloss/vim-javascript.git
+[submodule "vim/bundle/slim"]
+	path = vim/bundle/slim
+	url = git://github.com/slim-template/vim-slim.git
