--- a/tmux.conf
+++ b/tmux.conf
@@ -31,4 +31,9 @@ bind -n "C-\\" if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send
 # Bring back clear screen under tmux prefix
 bind C-l send-keys 'C-l'
 
+# Allow sending prefix to child
+bind-key a  send-prefix
+bind-key j  command-prompt -p "Join pane from:" "join-pane -s '%%'"
+bind-key s  command-prompt -p "Send pane to:"   "join-pane -t '%%'"
+
 # vim: ft=tmux
