Fix Vim to work with screen and make TMux responsive

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,7 @@ set -g prefix C-a
 
 set -g status on
 set -g status-utf8 on
-set -g status-interval 2
+set -g status-interval 1
 
 source "$HOME/.tmux/themes/agnoster.tmux"
 
@@ -17,7 +17,7 @@ set -g default-terminal screen-256color
 set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
-set -g mouse-utf8 on
+#set -g mouse-utf8 on
 
 set -g set-titles on
 
