--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 unbind C-b
-set -g prefix C-a
+set -g prefix C-q
 
 set -g status on
 set -g status-utf8 on
@@ -13,11 +13,12 @@ set-window-option -g utf8 on
 set-option -g status-utf8 on
 
 set -g default-terminal screen-256color
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
-#set -g mouse-utf8 on
+set -g mouse-utf8 on
 
 set -g set-titles on
 
@@ -32,8 +33,8 @@ bind -n "C-\\" if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send
 bind C-l send-keys 'C-l'
 
 # Allow sending prefix to child
-bind-key a  send-prefix
-bind-key j  command-prompt -p "Join pane from:" "join-pane -s '%%'"
-bind-key s  command-prompt -p "Send pane to:"   "join-pane -t '%%'"
+bind-key C-q  send-prefix
+bind-key j    command-prompt -p "Join pane from:" "join-pane -s '%%'"
+bind-key s    command-prompt -p "Send pane to:"   "join-pane -t '%%'"
 
 # vim: ft=tmux
