--- a/tmux.conf
+++ b/tmux.conf
@@ -37,4 +37,6 @@ bind-key C-q  send-prefix
 bind-key j    command-prompt -p "Join pane from:" "join-pane -s '%%'"
 bind-key s    command-prompt -p "Send pane to:"   "join-pane -t '%%'"
 
+set -g base-index 1
+
 # vim: ft=tmux
