--- a/.gitmodules
+++ b/.gitmodules
@@ -65,9 +65,6 @@
 [submodule "vim/bundle/supertab"]
   path = vim/bundle/supertab
   url = git://github.com/ervandew/supertab.git
-[submodule "vim/bundle/ctrlp"]
-  path = vim/bundle/ctrlp
-  url = git://github.com/kien/ctrlp.vim.git
 [submodule "vim/bundle/tagbar"]
   path = vim/bundle/tagbar
   url = git://github.com/majutsushi/tagbar.git
@@ -136,3 +133,9 @@
 [submodule "vim/bundle/webapi"]
 	path = vim/bundle/webapi
 	url = git://github.com/mattn/webapi-vim.git
+[submodule "vim/bundle/unite"]
+	path = vim/bundle/unite
+	url = git://github.com/Shougo/unite.vim.git
+[submodule "vim/bundle/vimproc"]
+	path = vim/bundle/vimproc
+	url = git://github.com/Shougo/vimproc.vim.git
