--- a/.gitmodules
+++ b/.gitmodules
@@ -145,3 +145,6 @@
 [submodule "vim/bundle/swapit"]
 	path = vim/bundle/swapit
 	url = git://github.com/mjbrownie/swapit.git
+[submodule "vim/bundle/vinegar"]
+	path = vim/bundle/vinegar
+	url = git://github.com/tpope/vim-vinegar.git
