--- a/.gitmodules
+++ b/.gitmodules
@@ -27,8 +27,8 @@
   path = vim/bundle/fugitive
   url = https://github.com/tpope/vim-fugitive.git
 [submodule "vim/bundle/rails"]
-	path = vim/bundle/rails
-	url = git://github.com/tpope/vim-rails.git
+  path = vim/bundle/rails
+  url = git://github.com/tpope/vim-rails.git
 [submodule "vim/bundle/puppet"]
   path = vim/bundle/puppet
   url = git://github.com/rodjek/vim-puppet.git
@@ -94,56 +94,59 @@
   url = git://github.com/Lokaltog/vim-easymotion.git
   ignore = dirty
 [submodule "vim/bundle/javascript"]
-	path = vim/bundle/javascript
-	url = git://github.com/pangloss/vim-javascript.git
+  path = vim/bundle/javascript
+  url = git://github.com/pangloss/vim-javascript.git
 [submodule "vim/bundle/slim"]
-	path = vim/bundle/slim
-	url = git://github.com/slim-template/vim-slim.git
+  path = vim/bundle/slim
+  url = git://github.com/slim-template/vim-slim.git
 [submodule "vim/bundle/io"]
-	path = vim/bundle/io
-	url = git://github.com/xhr/vim-io.git
+  path = vim/bundle/io
+  url = git://github.com/xhr/vim-io.git
 [submodule "vim/bundle/choosewin"]
-	path = vim/bundle/choosewin
-	url = git://github.com/t9md/vim-choosewin.git
+  path = vim/bundle/choosewin
+  url = git://github.com/t9md/vim-choosewin.git
 [submodule "vim/bundle/golang"]
-	path = vim/bundle/golang
-	url = git://github.com/jnwhiteh/vim-golang.git
+  path = vim/bundle/golang
+  url = git://github.com/jnwhiteh/vim-golang.git
 [submodule "vim/bundle/dockerfile"]
-	path = vim/bundle/dockerfile
-	url = git://github.com/ekalinin/Dockerfile.vim.git
+  path = vim/bundle/dockerfile
+  url = git://github.com/ekalinin/Dockerfile.vim.git
 [submodule "vim/bundle/nginx"]
-	path = vim/bundle/nginx
-	url = git://github.com/vim-scripts/nginx.vim.git
+  path = vim/bundle/nginx
+  url = git://github.com/vim-scripts/nginx.vim.git
 [submodule "vim/bundle/unimpaired"]
-	path = vim/bundle/unimpaired
-	url = git://github.com/tpope/vim-unimpaired.git
+  path = vim/bundle/unimpaired
+  url = git://github.com/tpope/vim-unimpaired.git
 [submodule "vim/bundle/commentary"]
-	path = vim/bundle/commentary
-	url = git://github.com/tpope/vim-commentary.git
+  path = vim/bundle/commentary
+  url = git://github.com/tpope/vim-commentary.git
 [submodule "vim/bundle/gist"]
-	path = vim/bundle/gist
-	url = git://github.com/mattn/gist-vim.git
+  path = vim/bundle/gist
+  url = git://github.com/mattn/gist-vim.git
 [submodule "vim/bundle/webapi"]
-	path = vim/bundle/webapi
-	url = git://github.com/mattn/webapi-vim.git
+  path = vim/bundle/webapi
+  url = git://github.com/mattn/webapi-vim.git
 [submodule "vim/bundle/unite"]
-	path = vim/bundle/unite
-	url = git://github.com/Shougo/unite.vim.git
+  path = vim/bundle/unite
+  url = git://github.com/Shougo/unite.vim.git
 [submodule "vim/bundle/vimproc"]
-	path = vim/bundle/vimproc
-	url = git://github.com/Shougo/vimproc.vim.git
+  path = vim/bundle/vimproc
+  url = git://github.com/Shougo/vimproc.vim.git
 [submodule "vim/bundle/gitgutter"]
-	path = vim/bundle/gitgutter
-	url = git://github.com/airblade/vim-gitgutter.git
+  path = vim/bundle/gitgutter
+  url = git://github.com/airblade/vim-gitgutter.git
 [submodule "vim/bundle/bundler"]
-	path = vim/bundle/bundler
-	url = git://github.com/tpope/vim-bundler.git
+  path = vim/bundle/bundler
+  url = git://github.com/tpope/vim-bundler.git
 [submodule "vim/bundle/swapit"]
-	path = vim/bundle/swapit
-	url = git://github.com/mjbrownie/swapit.git
+  path = vim/bundle/swapit
+  url = git://github.com/mjbrownie/swapit.git
 [submodule "vim/bundle/vinegar"]
-	path = vim/bundle/vinegar
-	url = git://github.com/tpope/vim-vinegar.git
+  path = vim/bundle/vinegar
+  url = git://github.com/tpope/vim-vinegar.git
 [submodule "vim/bundle/snipmate"]
-	path = vim/bundle/snipmate
-	url = git://github.com/garbas/vim-snipmate.git
+  path = vim/bundle/snipmate
+  url = git://github.com/garbas/vim-snipmate.git
+[submodule "vim/bundle/elixir"]
+  path = vim/bundle/elixir
+  url = git://github.com/elixir-lang/vim-elixir.git
