--- a/peru.yaml
+++ b/peru.yaml
@@ -1,11 +1,12 @@
 imports:
   pathogen: vim/autoload
-  vim-ag: vim/bundle/ag
   vim-airline: vim/bundle/airline
   vim-bufferline: vim/bundle/bufferline
   vim-bundler: vim/bundle/bundler
   vim-commentary: vim/bundle/commentary
   vim-delimmate: vim/bundle/delimmate
+  vim-editorconfig: vim/bundle/editorconfig
+  vim-fish: vim/bundle/fish
   vim-fugitive: vim/bundle/fugitive
   vim-gitgutter: vim/bundle/gitgutter
   vim-go: vim/bundle/go
@@ -40,7 +41,7 @@ git module vim-solarized:
 
 git module vim-rails:
   url: https://github.com/tpope/vim-rails.git
-  rev: f7d264fc27b3dfcbc54f8b16f3ae6aea4f92ee4c
+  rev: 18b5806910df63d65206593cd2001807d01cd083
 
 git module vim-unite:
   url: https://github.com/Shougo/unite.vim.git
@@ -65,7 +66,7 @@ git module vim-repeat:
 git module vim-vimproc:
   url: https://github.com/Shougo/vimproc.vim.git
   build: make
-  rev: 728a5fe35dc87f434e4f67ea8d9c4e0c1d504951
+  rev: 98482672f888aec28ae3764e4432f7127ca8697b
 
 git module vim-tabular:
   url: https://github.com/godlygeek/tabular.git
@@ -124,10 +125,6 @@ git module vim-indent-guides:
   url: https://github.com/nathanaelkane/vim-indent-guides.git
   rev: eec1b629dc4cfa3986d20f21d4b4489732cd3f5a
 
-git module vim-ag:
-  url: https://github.com/rking/ag.vim.git
-  rev: d3a00f8affb091e7a14eb34f1beb9db9bb57a4bf
-
 git module vim-bundler:
   url: https://github.com/tpope/vim-bundler.git
   rev: 48abb774c72732a75f8ab05ee7493b1041dd8ae8
@@ -151,3 +148,11 @@ git module vim-rust:
 git module vim-delimmate:
   url: https://github.com/Raimondi/delimitMate.git
   rev: fe1983cfa1cf0924ac9b2b8576255daffd36afbf
+
+git module vim-editorconfig:
+  url: https://github.com/editorconfig/editorconfig-vim.git
+  rev: f28c03acdbefd27a3ed483b9aad20d99ed930023
+
+git module vim-fish:
+  url: https://github.com/dag/vim-fish.git
+  rev: 825853f4816a07e59ea2ecee1190ab6a5d9ef991
