Add some bin utils

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,16 @@
-vim/backups
-vim/.netrwhist
-vim/tags/*
-vim/bundle/*
+/bin/
+!/bin/.keep
+!/bin/tmux-airline
+
+/vim/backups
+/vim/.netrwhist
+
+/vim/bundle
+!/vim/bundle/.keep
+
+/vim/tags
+!/vim/tags/.gitignore
+
 /.peru
-!vim/tags/.gitignore
+
 *.spl
