Setup Unite, BufferLine, DelimMate and navigation

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,7 +3,7 @@
   - [peru sync, Fetch dependencies]
 - link:
     ~/.conkyrc: conkyrc
-    ~/.ctagsrc: ctagsrc
+    ~/.ctags: ctags
     ~/.dir_colors: dir_colors
     ~/.gdbinit: gdbinit
     ~/.pryrc: pryrc
