--- a/peru.yaml
+++ b/peru.yaml
@@ -5,35 +5,43 @@ imports:
   pathogen: vim/autoload
 
   vim-airline: vim/bundle/airline
-  vim-autoclose: vim/bundle/autoclose
   vim-bufferline: vim/bundle/bufferline
   vim-bundler: vim/bundle/bundler
   vim-commentary: vim/bundle/commentary
+  # vim-complete: vim/bundle/complete
+  vim-delimmate: vim/bundle/delimmate
+  vim-docker: vim/bundle/docker
   vim-editorconfig: vim/bundle/editorconfig
   vim-fish: vim/bundle/fish
   vim-fugitive: vim/bundle/fugitive
   vim-gitgutter: vim/bundle/gitgutter
   vim-go: vim/bundle/go
-  vim-gundo: vim/bundle/gundo
+  vim-undotree: vim/bundle/undotree
   vim-indent-guides: vim/bundle/indent-guides
   vim-latex: vim/bundle/latex
   vim-multiple-cursors: vim/bundle/multiple-cursors
   vim-numbers: vim/bundle/numbers
+  vim-projectionist: vim/bundle/projectionist
   vim-rails: vim/bundle/rails
   vim-rbenv: vim/bundle/rbenv
   vim-repeat: vim/bundle/repeat
+  vim-rhubarb: vim/bundle/rhubarb
   vim-rust: vim/bundle/rust
+  vim-sensible: vim/bundle/sensible
+  vim-snippets: vim/bundle/snippets
   vim-solarized: vim/bundle/solarized
+  vim-supertab: vim/bundle/supertab
   vim-surround: vim/bundle/surround
   vim-swapit: vim/bundle/swapit
   vim-syntastic: vim/bundle/syntastic
   vim-tabular: vim/bundle/tabular
   vim-tagbar: vim/bundle/tagbar
+  vim-tlib: vim/bundle/tlib
   vim-toml: vim/bundle/toml
   vim-unimpaired: vim/bundle/unimpaired
   vim-unite: vim/bundle/unite
   vim-vimproc: vim/bundle/vimproc
-  vim-ycm: vim/bundle/ycm
+  vim-mv-utils: vim/bundle/mv-utils
 
 curl module pathogen:
   url: https://tpo.pe/pathogen.vim
@@ -47,7 +55,7 @@ curl module leiningen:
 git module spark:
   url: https://github.com/holman/spark.git
   files: spark
-  rev: 983244741db48965905e4fe9bcef94b4e2595783
+  rev: 7440460975471917f2d670bda97a645ccf085bc9
 
 git module vim-solarized:
   url: https://github.com/altercation/vim-colors-solarized
@@ -55,19 +63,19 @@ git module vim-solarized:
 
 git module vim-rails:
   url: https://github.com/tpope/vim-rails.git
-  rev: 18b5806910df63d65206593cd2001807d01cd083
+  rev: 5f517db69d12976397443ea2dfead3da4592ccb9
 
 git module vim-unite:
   url: https://github.com/Shougo/unite.vim.git
-  rev: 704325ae48cf96d6c9588279c733f50f78dec3e4
+  rev: 5b113caec4ec8eed2df13ce0db7565776e1b36ee
 
 git module vim-airline:
   url: https://github.com/bling/vim-airline.git
-  rev: 401ce611c6f9b9e8be0857cf6094604033e1b717
+  rev: 13ee9f456ac1a7d9e427874c7a6981c2461a6c4d
 
-git module vim-gundo:
-  url: https://github.com/sjl/gundo.vim.git
-  rev: 3975ac871565115e3769dc69c06bc88ddc1369af
+git module vim-undotree:
+  url: https://github.com/mbbill/undotree.git
+  rev: 6acc0aebb78aef5c3d97743c3556b73491c21446
 
 git module vim-surround:
   url: https://github.com/tpope/vim-surround.git
@@ -94,10 +102,9 @@ git module vim-unimpaired:
   url: https://github.com/tpope/vim-unimpaired.git
   rev: 3548479cc154154cbdbb6737ca08a47937cc7113
 
-git module vim-ycm:
-  url: https://github.com/Valloric/YouCompleteMe.git
-  build: ./install.sh
-  rev: c6f63aee1bfbd69c261b89282c0288f3a14ab50f
+git module vim-complete:
+  url: https://github.com/Shougo/neocomplete.vim.git
+  rev: c506ad4bc38a7c21b430b9208d85b8533abd675a
 
 git module vim-swapit:
   url: https://github.com/mjbrownie/swapit.git
@@ -113,7 +120,7 @@ git module vim-numbers:
 
 git module vim-syntastic:
   url: https://github.com/scrooloose/syntastic.git
-  rev: b340672bd03d877ede83f95ccec6a98bbd536d42
+  rev: 1d2f8d514a3a03fba28d46a9072817e2777bec00
 
 git module vim-rbenv:
   url: https://github.com/tpope/vim-rbenv.git
@@ -125,11 +132,11 @@ git module vim-fugitive:
 
 git module vim-bufferline:
   url: https://github.com/bling/vim-bufferline.git
-  rev: 706e059acc3de5c829ba2d2685759c077a52ebbc
+  rev: c595cbb2478c4ecde633d3ccb9be7260ca86aa39
 
 git module vim-go:
   url: https://github.com/fatih/vim-go.git
-  rev: 81fa39ffd357ad7b9578d3d9b349050fe9cd9b59
+  rev: 14846b59f4dc5a4ca6a8be2f76a530e4385398c9
 
 git module vim-tagbar:
   url: https://github.com/majutsushi/tagbar.git
@@ -149,24 +156,56 @@ git module vim-gitgutter:
 
 git module vim-latex:
   url: https://github.com/lervag/vim-latex.git
-  rev: 673705b0b2ad38d2c7c60f20df7385f4f4b56caa
+  rev: f3be519af1f5820bbdb250ae761fbb439b2f1e8d
 
 git module vim-toml:
   url: https://github.com/cespare/vim-toml.git
-  rev: 8d73b9ad3efc845d3d29b69942c0029f31287b8d
+  rev: 57a9658240fb7df457744c1f81c0d395ffd61a6b
 
 git module vim-rust:
   url: https://github.com/wting/rust.vim.git
-  rev: 3ed6c6afb4a1f5d1f7edc3ba0eb61fc723d49bbe
-
-git module vim-autoclose:
-  url: https://github.com/Townk/vim-autoclose.git
-  rev: a9a3b7384657bc1f60a963fd6c08c63fc48d61c3
+  rev: 078cfac98bde67bc28c0618f93e64b63be50b42b
 
 git module vim-editorconfig:
   url: https://github.com/editorconfig/editorconfig-vim.git
-  rev: f28c03acdbefd27a3ed483b9aad20d99ed930023
+  rev: 3484d2e13b0a29cdaa307b51f38b039633d91aac
 
 git module vim-fish:
   url: https://github.com/dag/vim-fish.git
   rev: 825853f4816a07e59ea2ecee1190ab6a5d9ef991
+
+git module vim-sensible:
+  url: https://github.com/tpope/vim-sensible.git
+  rev: b30dcf387af977acfa21732592bfca05598b2188
+
+git module vim-rhubarb:
+  url: https://github.com/tpope/vim-rhubarb.git
+  rev: 3772a98b3a2f4e7440d0924e923aca7187234e7b
+
+git module vim-projectionist:
+  url: https://github.com/tpope/vim-projectionist.git
+  rev: ef252eb227928df6f63590f21584a46c08792021
+
+git module vim-delimmate:
+  url: https://github.com/Raimondi/delimitMate.git
+  rev: 07b7cc969fb5c7709dfeb07f6808c448d6fae771
+
+git module vim-docker:
+  url: https://github.com/ekalinin/Dockerfile.vim.git
+  rev: a3fa6dd4c3aaabb65fd018885d7d90925cf7e03f
+
+git module vim-snippets:
+  url: https://github.com/garbas/vim-snipmate.git
+  rev: 8cb6c3ebe267873dc5abb9a36305c75d9564dea4
+
+git module vim-supertab:
+  url: https://github.com/ervandew/supertab.git
+  rev: b0ca47f4570385043f270f9278ba6d50d1d2fa00
+
+git module vim-mv-utils:
+  url: https://github.com/MarcWeber/vim-addon-mw-utils.git
+  rev: 0c5612fa31ee434ba055e21c76f456244b3b5109
+
+git module vim-tlib:
+  url: https://github.com/tomtom/tlib_vim.git
+  rev: b730863d67f26e01868fee5a9a680a0c721bd44a
