--- a/peru.yaml
+++ b/peru.yaml
@@ -28,6 +28,7 @@ imports:
   vim-rhubarb: vim/bundle/rhubarb
   vim-rust: vim/bundle/rust
   vim-sensible: vim/bundle/sensible
+  vim-snipmate: vim/bundle/snipmate
   vim-snippets: vim/bundle/snippets
   vim-solarized: vim/bundle/solarized
   vim-supertab: vim/bundle/supertab
@@ -50,7 +51,7 @@ curl module pathogen:
 curl module leiningen:
   url: https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein
   build: chmod +x lein
-  sha1: 119b4c8bacfa7f7809bce3cd0233b186ffdbc6d5
+  sha1: b59d741e3ad28b3a11ea28eab417133492ca2138
 
 git module spark:
   url: https://github.com/holman/spark.git
@@ -63,11 +64,11 @@ git module vim-solarized:
 
 git module vim-rails:
   url: https://github.com/tpope/vim-rails.git
-  rev: 5f517db69d12976397443ea2dfead3da4592ccb9
+  rev: b5ccdb47f0b0001bf263a80315d3b6bca7bc3b2e
 
 git module vim-unite:
   url: https://github.com/Shougo/unite.vim.git
-  rev: 5b113caec4ec8eed2df13ce0db7565776e1b36ee
+  rev: c300a76a6af48265d783e0626eafb84e680d6bb3
 
 git module vim-airline:
   url: https://github.com/bling/vim-airline.git
@@ -83,12 +84,12 @@ git module vim-surround:
 
 git module vim-repeat:
   url: https://github.com/tpope/vim-repeat.git
-  rev: 5eba0f19c87402643eb8a7e7d20d9d5338fd6d71
+  rev: bd3b51723559ceefe36484fbd35524a98062ba8e
 
 git module vim-vimproc:
   url: https://github.com/Shougo/vimproc.vim.git
   build: make
-  rev: 98482672f888aec28ae3764e4432f7127ca8697b
+  rev: 04b45cd80f48f66daed04a1a48a7ea4e7d316086
 
 git module vim-tabular:
   url: https://github.com/godlygeek/tabular.git
@@ -96,7 +97,7 @@ git module vim-tabular:
 
 git module vim-multiple-cursors:
   url: https://github.com/terryma/vim-multiple-cursors.git
-  rev: a95edcdffd98c5961f067796fbc2a1a82e0f6a83
+  rev: 83c07b1bcc738bad7ac04d8042ae6b0a0cd7229d
 
 git module vim-unimpaired:
   url: https://github.com/tpope/vim-unimpaired.git
@@ -104,11 +105,11 @@ git module vim-unimpaired:
 
 git module vim-complete:
   url: https://github.com/Shougo/neocomplete.vim.git
-  rev: c506ad4bc38a7c21b430b9208d85b8533abd675a
+  rev: b3e0e729271b4910ec0c54d15932792031a6be26
 
 git module vim-swapit:
   url: https://github.com/mjbrownie/swapit.git
-  rev: d7d9f6d5c01885e05fb9390b3f9ce051327f1973
+  rev: dcf25ecac3f17d68a7038db0fc21c491d19c60b7
 
 git module vim-commentary:
   url: https://github.com/tpope/vim-commentary.git
@@ -120,7 +121,7 @@ git module vim-numbers:
 
 git module vim-syntastic:
   url: https://github.com/scrooloose/syntastic.git
-  rev: 1d2f8d514a3a03fba28d46a9072817e2777bec00
+  rev: 2d27fd93d047b1cf4db8f7a032a762eb101d489b
 
 git module vim-rbenv:
   url: https://github.com/tpope/vim-rbenv.git
@@ -128,7 +129,7 @@ git module vim-rbenv:
 
 git module vim-fugitive:
   url: https://github.com/tpope/vim-fugitive.git
-  rev: 2c8461db084d205903a792a23163faa546f143c9
+  rev: 933f6a1e1df549564062f936bd1c836d28cf1676
 
 git module vim-bufferline:
   url: https://github.com/bling/vim-bufferline.git
@@ -136,11 +137,11 @@ git module vim-bufferline:
 
 git module vim-go:
   url: https://github.com/fatih/vim-go.git
-  rev: 14846b59f4dc5a4ca6a8be2f76a530e4385398c9
+  rev: 07f95f06f7e6e735a0f4657a30ee1a8e1dd9e84e
 
 git module vim-tagbar:
   url: https://github.com/majutsushi/tagbar.git
-  rev: bfc121dc38271ab3f050609bb2ca377de07d8bd6
+  rev: 04bb7280399a2c6e1e8c56b31125cd44b1f4d336
 
 git module vim-indent-guides:
   url: https://github.com/nathanaelkane/vim-indent-guides.git
@@ -152,23 +153,23 @@ git module vim-bundler:
 
 git module vim-gitgutter:
   url: https://github.com/airblade/vim-gitgutter.git
-  rev: 1a68abedf1115482beb02834ebc42bc3f6a07672
+  rev: e5efbaffc066ababc9ae0d689c7050fa5d6591bd
 
 git module vim-latex:
   url: https://github.com/lervag/vim-latex.git
-  rev: f3be519af1f5820bbdb250ae761fbb439b2f1e8d
+  rev: a22cb708986fdf44fce532247f5f7017f5280b97
 
 git module vim-toml:
   url: https://github.com/cespare/vim-toml.git
-  rev: 57a9658240fb7df457744c1f81c0d395ffd61a6b
+  rev: bb70afc2d7cd8120b6dd74db6da4249ab5105363
 
 git module vim-rust:
   url: https://github.com/wting/rust.vim.git
-  rev: 078cfac98bde67bc28c0618f93e64b63be50b42b
+  rev: 08bb56fbdb61380621db6fe36a24d0a3d176f7a0
 
 git module vim-editorconfig:
   url: https://github.com/editorconfig/editorconfig-vim.git
-  rev: 3484d2e13b0a29cdaa307b51f38b039633d91aac
+  rev: d48e245dbf9e24d1957e68d72fd59409020cbdc4
 
 git module vim-fish:
   url: https://github.com/dag/vim-fish.git
@@ -188,19 +189,23 @@ git module vim-projectionist:
 
 git module vim-delimmate:
   url: https://github.com/Raimondi/delimitMate.git
-  rev: 07b7cc969fb5c7709dfeb07f6808c448d6fae771
+  rev: 470c053a3ba673007a85237a1ac8415428fd8446
 
 git module vim-docker:
   url: https://github.com/ekalinin/Dockerfile.vim.git
-  rev: a3fa6dd4c3aaabb65fd018885d7d90925cf7e03f
+  rev: f5e94427a55acb1c09d7d909df00237d1d8d7068
+
+git module vim-snipmate:
+  url: https://github.com/garbas/vim-snipmate.git
+  rev: a12de2e399e3a355fa35dc2158e0377ce8fb4291
 
 git module vim-snippets:
-  url: https://github.com/garbas/vim-snipmate.git
-  rev: 8cb6c3ebe267873dc5abb9a36305c75d9564dea4
+  url: https://github.com/honza/vim-snippets.git
+  rev: 368973b9d54ef0760a6c4d2f71b31b8759454e83
 
 git module vim-supertab:
   url: https://github.com/ervandew/supertab.git
-  rev: b0ca47f4570385043f270f9278ba6d50d1d2fa00
+  rev: 454c06e25680799b6f408622d6bfbaf920ace825
 
 git module vim-mv-utils:
   url: https://github.com/MarcWeber/vim-addon-mw-utils.git
@@ -208,4 +213,4 @@ git module vim-mv-utils:
 
 git module vim-tlib:
   url: https://github.com/tomtom/tlib_vim.git
-  rev: b730863d67f26e01868fee5a9a680a0c721bd44a
+  rev: 9e629767e5a91ede057d07f8754326e68c92a692
