Use wa once again

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,7 @@ set -g prefix C-q
 set -g status on
 set -g status-utf8 on
 set -g status-interval 1
+set -g escape-time 0
 
 source "$HOME/.tmux/themes/agnoster.tmux"
 
@@ -12,7 +13,7 @@ setw -g mode-keys vi
 set-window-option -g utf8 on
 set-option -g status-utf8 on
 
-set -g default-terminal screen-256color
+# set -g default-terminal screen-256color
 
 set -g mouse-resize-pane on
 set -g mouse-select-pane on
