--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,7 @@ set -g prefix C-q
 set -g status on
 set -g status-utf8 on
 set -g status-interval 1
-set -g escape-time 0
+set -sg escape-time 0
 
 source "$HOME/.tmux/themes/agnoster.tmux"
 
