--- a/tmux/Makefile
+++ b/tmux/Makefile
@@ -1,3 +1,8 @@
 install:
 	$(LN) tmux/conf ${HOME}/.tmux.conf
 	$(LN) tmux ${HOME}/.tmux
+
+clean:
+	rm ${HOME}/.tmux.conf ${HOME}/.tmux
+
+.PHONY: install clean
