--- a/nvim/Makefile
+++ b/nvim/Makefile
@@ -1,7 +1,7 @@
 XDG_CONFIG_HOME ?= ${HOME}/.config
 
 install:
-	$(LN) nvim $(XDG_CONFIG_HOME)/nvim
+	$(LN) . $(XDG_CONFIG_HOME)/nvim
 	# nvim +PlugUpdate +qall # Currently doesn't work
 	@echo 'Run NeoVim and execute `:PlugInstall`'
 
