--- a/gdb/Makefile
+++ b/gdb/Makefile
@@ -1,8 +1,10 @@
-dashboard:
-	$(WGET) -O$@ http://git.io/.gdbinit
+PWD = $(shell pwd)
 
 install: dashboard
-	$(LN) dashboard ${HOME}/.gdbinit
+	$(LN) ${PWD}/dashboard ${HOME}/.gdbinit
+
+dashboard:
+	$(WGET) -O$@ http://git.io/.gdbinit
 
 clean:
 	rm ${HOME}/.gdbinit
