--- a/utils/Makefile
+++ b/utils/Makefile
@@ -1,11 +1,12 @@
+PWD = $(shell pwd)
 UTILS = dir_colors ctags
 
 $(UTILS):
-	$(LN) $@ ${HOME}/.$@
+	$(LN) ${PWD}/$@ ${HOME}/.$@
 
 install: dir_colors ctags
 
 clear:
-	for util in $(UTILS); do rm $$util; done
+	for util in $(UTILS); do rm ${HOME}/.$$util; done
 
 .PHONY: install clear ctags dir_colors
