--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,7 +1,9 @@
-FILES = lein git-imerge docker-compose
+FILES = lein git-imerge docker-compose docker-machine
+
+PWD = $(shell pwd)
 
 install: $(FILES) pip
-	$(LN) . ${HOME}/.local/bin
+	$(LN) ${PWD} ${HOME}/.local/bin
 
 lein:
 	$(WGET) -O$@ https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein
@@ -17,5 +19,9 @@ pip:
 docker-compose:
 	$(WGET) -O$@ https://github.com/docker/compose/releases/download/1.5.1/docker-compose-$(shell uname -s)-$(shell uname -m)
 	chmod +x $@
+
+docker-machine:
+	$(WGET) -O$@.zip https://github.com/docker/machine/releases/download/v0.5.0/docker-machine_linux-amd64.zip
+	unzip -f $@.zip
 
 .PHONY: pip $(FILES)
