--- a/git/config
+++ b/git/config
@@ -2,11 +2,14 @@
 	editor = nvim
 
 [alias]
-	ca = commit --amend
+	ai = add -i
 	b = branch
+	ca = commit --amend
 	ci = commit
 	co = checkout
+	cob = checkout -b
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+	pr = pull-request
 	rci = commit --amend --reuse-message HEAD
 	root = !git checkout master && git up
 	squash = rebase -i @{u}
@@ -23,6 +26,8 @@
 	default = simple
 [pull]
 	ff = only
+[rebase]
+	autostash = true
 [credential]
 	helper = cache --timeout=3600
 
